--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Elijah Iverson"
   avatar           : "/assets/images/profile.png"
-  bio              : "Information Security Pracitioner and Automator"
+  bio              : "Information Security Pracitioner"
   location         : "United States"
   linkedin	       : "elijah-iverson/"
   email            :
